Updated admin panel

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,6 +1,7 @@
-REACT_APP_API=
-REACT_APP_AUTHDOMAIN=
-REACT_APP_PROJECTID=
-REACT_APP_STORAGE_BUCKET=
-REACT_APP_SENDERID=
-REACT_APP_APPID=
+REACT_APP_API =
+REACT_APP_AUTHDOMAIN =
+REACT_APP_PROJECTID =
+REACT_APP_STORAGE_BUCKET =
+REACT_APP_SENDERID =
+REACT_APP_APPID =
+REACT_APP_APILINK = 
