--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -4,4 +4,4 @@ REACT_APP_PROJECTID =
 REACT_APP_STORAGE_BUCKET =
 REACT_APP_SENDERID =
 REACT_APP_APPID =
-REACT_APP_APILINK = 
+REACT_APP_APILINK = http://localhost:5000/api
