--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "backend",
+  "name": "cms-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "MERN Stack College Management System",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
-  "author": "",
+  "author": "Krish Jotaniya",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
