--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cms-krish",
+  "name": "cms-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.2.7"
   }
 }
