--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,2 +1,2 @@
-MONGODB_URI =
-PORT = 
+mongo_URI = 'mongodb+srv://acmproject:Peter231@acm.0xxilri.mongodb.net/test?retryWrites=true&w=majority';
+PORT = 5000;
