--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,7 +1,7 @@
-REACT_APP_API =
-REACT_APP_AUTHDOMAIN =
-REACT_APP_PROJECTID =
-REACT_APP_STORAGE_BUCKET =
-REACT_APP_SENDERID =
-REACT_APP_APPID =
+REACT_APP_API = "AIzaSyDkzT69-_kBs93ALupqlFTVNU5XdV9TW0g"
+REACT_APP_AUTHDOMAIN ="college-management-7cd78.firebaseapp.com"
+REACT_APP_PROJECTID = "college-management-7cd78"
+REACT_APP_STORAGE_BUCKET = "college-management-7cd78.appspot.com"
+REACT_APP_SENDERID = "488422625986"
+REACT_APP_APPID = "1:488422625986:web:2fbe0b3e1f38ff32c9215b"
 REACT_APP_APILINK = http://localhost:5000/api
