--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "cloudinary": "^1.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
