--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,12 @@
-MONGODB_URI =
+MONGODB_URI = mongodb://127.0.0.1:27017/College-Management-System
 PORT = 5000
 FRONTEND_API_LINK = http://localhost:3000
+
+CLOUD_NAME = 
+API_KEY = 
+API_SECRET = 
+
+AWS_ACCESS_KEY = 
+AWS_SECRET_KEY =
+AWS_BUCKET_NAME = 
+AWS_LOCATION =
