--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,8 @@
   "author": "Krish Jotaniya",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.484.0",
+    "@aws-sdk/s3-request-presigner": "^3.484.0",
     "axios": "^1.3.4",
     "cloudinary": "^1.41.1",
     "cors": "^2.8.5",
