sample env added

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,7 +1,3 @@
-REACT_APP_API =
-REACT_APP_AUTHDOMAIN =
-REACT_APP_PROJECTID =
-REACT_APP_STORAGE_BUCKET =
-REACT_APP_SENDERID =
-REACT_APP_APPID =
 REACT_APP_APILINK = http://localhost:5000/api
+
+REACT_APP_MEDIA_LINK = http://localhost:5000/media
