--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "nodemon": "^2.0.21"
   }
 }
