--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,4 @@
 MONGODB_URI =mongodb://127.0.0.1:27017/College-Management-System
 PORT = 4000
 FRONTEND_API_LINK = http://localhost:3000
+JWT_SECRET = THISISSECRET
