--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
